@@ -89,6 +89,44 @@ docker login
 docker push docker.io/viptime/tomcat8_base_4g:v1
 ```
 
+# 三、将自定义war添加到官方Tomcat镜像
+
+```bash
+official
+
+cat >dockerfile_official<<\EOF
+#在这里用tomcat:8.5作为tomcat的基础镜像
+FROM tomcat:8.5
+
+#镜像维护者信息
+MAINTAINER Lancger@qq.com
+
+#这个环境变量用来表名该镜像模板的最后更新时间
+ENV REFRESHED_AT 2020-12-17
+
+#切换镜像目录，进入/usr/local/tomcat目录
+WORKDIR /usr/local/tomcat
+
+#覆盖相关文件
+COPY server.xml /usr/local/tomcat/conf/
+
+#将自己的war包放到对应的目录
+ADD ROOT.war /usr/local/tomcat/webapps/
+
+#添加jvm参数
+ENV JAVA_OPTS="$JAVA_OPTS -server -Xms4096m -Xmx4096m -Xmn2048m -Xss256K -XX:MetaspaceSize=1024m -XX:MaxMetaspaceSize=1024m -XX:CMSInitiatingOccupancyFraction=75 -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+UseCMSInitiatingOccupancyOnly -Duser.timezone=GMT+08"
+
+RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo 'Asia/Shanghai' >/etc/timezone
+
+#启动tomcat shell执行程序
+CMD ["catalina.sh", "run"] 
+EOF
+
+docker build -t viptime/tomcat8_official_4g:v1 -f dockerfile_official .
+
+docker push docker.io/viptime/tomcat8_official_4g:v1
+```
+
 参考资料：
 
 https://www.coder.work/article/41481  docker - Docker将warfile添加到官方Tomcat镜像
